--- a/testBrowse/testBrowse/test.html
+++ b/testBrowse/testBrowse/test.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <script type="text/javascript" async defer src="http://maps.google.com/maps/api/js?sensor=true&callback=initMap"></script>
+    <script type="text/javascript" async defer src="http://maps.google.com/maps/api/js?libraries=places&sensor=true&callback=initialize"></script>
     <script src="mapbasics.js" type="text/javascript"></script>
     <style>
         body, html {
@@ -19,10 +19,14 @@
             height: 90%;
         }
     </style>
+
 </head>
 
 <body>
     <div id="map"></div>
+    <div>
+        <input id="address" value="Sydney, NSW">
+    </div>
 </body>
 </html>
 
